Added dockerfile and modified jenkins file

--- a/JenkinsNetCore/Jenkinsfile
+++ b/JenkinsNetCore/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
   agent {
     docker {
-      image 'jenkins/slave:latest-jdk11'
+      image 'jenkinsnetcoreagent:latest'
     }
   }
 
