fixed jenkins file

--- a/TestProject/Jenkinsfile
+++ b/TestProject/Jenkinsfile
@@ -1,26 +1,30 @@
-node {
+def app
 
+pipeline {
+    agent any
     stages {
         stage('SCM') {
             steps {
                 checkout([$class: 'GitSCM', branches: [[name: '*/JenkinsTestProject']], doGenerateSubmoduleConfigurations: false, extensions: [], submoduleCfg: [], userRemoteConfigs: [[url: 'https://github.com/executeautomation/SeleniumWithCucucumber']]])
             }
         }
-
         stage('Build image') {
-        /* This builds the actual image; synonymous to
-         * docker build on the command line */
-
-        app = docker.build("testproject/agent:latest")
-
-
-        }
-
-        stage('Check Image') {
-            app.inside {
-                sh 'echo java --version'
+            steps{
+                script {
+                    app = docker.build("testproject/agent:latest")
+                }
             }
         }
 
+
+        stage('Check Image') {
+            steps {
+                script {
+                    app.inside {
+                        sh 'echo java --version'
+                    }
+                }
+            }
+        }
     }
 }
