--- a/TestProject/Jenkinsfile
+++ b/TestProject/Jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
             steps {
                 script {
                     app.inside {
-                        sh '/opt/testproject/agent java --version'
+                        sh 'java --version'
                     }
                 }
             }
