--- a/JenkinsNetCore/Jenkinsfile
+++ b/JenkinsNetCore/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
   agent {
     docker {
-      image 'jenkinsnetcoreagent:latest'
+      image 'executeautomation/jenkinsnetcoreagent:latest'
     }
   }
 
