--- a/docker/Jenkinsfile
+++ b/docker/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
-   agent any //{
-       //label 'slave'
-  // }
+   agent  {
+       label 'slave'
+  }
 
    stages {
       stage('Hello') {
